# Haskell_start

./: .gitignore  LICENSE  sqeq.cabal  stack.yaml
exe/: Main.hs
lib/: Sqeq.hs
test/: Tests.hs
